# cursh

./: Cargo.toml  LICENSE.txt
src/: README.md  main.rs
