[package]
name = "cursh"
version = "0.1.1"
edition = "2021"
authors = ["Maxwell A. Borden"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tacklebox/cursh"
description = "Cursh - cli tool to pass clipboard contents as temporary files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli-clipboard = "0.2.1"
colored = "2.0.0"
regex = "1.6.0"
tempfile = "3.3.0"
